--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -1,182 +1,178 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/srLayout_cam_list_refresh"
+    android:id="@+id/c_layout_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_white">
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/c_layout_parent"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/message_appbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/color_white"
+        app:layout_behavior="com.cylan.jiafeigou.widget.CameraMessageAppBarBehavior">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/apl_cam_message_appbar_layout"
+        <FrameLayout
+            android:id="@+id/fLayout_message_face"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/color_white"
-            app:layout_behavior="com.cylan.jiafeigou.widget.FaceItemAppbarBehavior">
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|enterAlways" />
+    </android.support.design.widget.AppBarLayout>
 
-            
+    <RelativeLayout
+        android:id="@+id/rLayout_cam_message_list_top"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/color_white"
+        android:visibility="visible"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <RelativeLayout
-                android:id="@+id/cl_header_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="@dimen/y42"
-                android:orientation="vertical"
-                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed">
-
-                <FrameLayout
-                    android:id="@+id/fLayout_message_face"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-
-                <RelativeLayout
-                    android:id="@+id/rLayout_cam_message_list_top"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/y42"
-                    android:layout_below="@+id/fLayout_message_face"
-                    android:visibility="visible">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/y1"
-                        android:layout_gravity="bottom"
-                        android:background="@color/color_d2d2d2" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"
+            android:layout_gravity="bottom"
+            android:background="@color/color_d2d2d2" />
 
 
-                    <TextView
-                        android:id="@+id/iv_back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="@dimen/x15"
-                        android:paddingRight="@dimen/x15"
-                        android:text="@string/BACK"
-                        android:textColor="@color/common_btn_color_state"
-                        android:visibility="invisible" />
+        <TextView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/x15"
+            android:paddingRight="@dimen/x15"
+            android:text="@string/BACK"
+            android:textColor="@color/common_btn_color_state"
+            android:visibility="invisible" />
 
-                    <TextView
-                        android:id="@+id/tv_cam_message_list_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center"
-                        android:clickable="true"
-                        android:drawablePadding="@dimen/x10"
-                        android:gravity="center_vertical" />
+        <TextView
+            android:id="@+id/tv_cam_message_list_date"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:clickable="true"
+            android:drawablePadding="@dimen/x10"
+            android:focusable="true"
+            android:gravity="center_vertical" />
 
-                    <TextView
-                        android:id="@+id/tv_cam_message_list_edit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="end|center_vertical"
-                        android:layout_toStartOf="@+id/iv_cam_message_arrow"
-                        android:gravity="center_vertical"
-                        android:paddingLeft="@dimen/x15"
-                        android:paddingRight="@dimen/x15"
-                        android:text="@string/EDIT_THEME"
-                        android:textColor="@color/common_btn_color_state" />
+        <!--<ImageView-->
+            <!--android:id="@+id/iv_cam_message_arrow"-->
+            <!--android:layout_width="@dimen/y42"-->
+            <!--android:layout_height="@dimen/y42"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:layout_toEndOf="@+id/tv_cam_message_list_date"-->
+            <!--android:clickable="true"-->
+            <!--android:focusable="true"-->
+            <!--android:padding="@dimen/y8"-->
+            <!--android:src="@drawable/btn_unfolded"-->
+            <!--android:tag="arrow_up" />-->
 
-                    <ImageView
-                        android:id="@+id/iv_cam_message_arrow"
-                        android:layout_width="@dimen/y42"
-                        android:layout_height="@dimen/y42"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="center_vertical"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:padding="@dimen/y8"
-                        android:src="@drawable/btn_unfolded"
-                        android:tag="arrow_up" />
+        <TextView
+            android:id="@+id/tv_cam_message_list_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="end|center_vertical"
+            android:enabled="false"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/x15"
+            android:paddingRight="@dimen/x15"
+            android:text="@string/EDIT_THEME"
+            android:textColor="@color/common_btn_color_state" />
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/y1"
-                        android:layout_alignParentBottom="true"
-                        android:layout_gravity="bottom"
-                        android:background="@color/color_d2d2d2" />
-                </RelativeLayout>
-            </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:background="@color/color_d2d2d2" />
+    </RelativeLayout>
 
 
-        </android.support.design.widget.AppBarLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srLayout_cam_list_refresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.cylan.jiafeigou.widget.CameraMessageBehavior">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_cam_message_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            android:layout_height="match_parent" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
+
+    <TextView
+        android:id="@+id/lLayout_no_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:drawablePadding="@dimen/y16"
+        android:drawableTop="@drawable/pic_nomessage"
+        android:gravity="center_horizontal"
+        android:text="@string/NO_CONTENTS_1"
+        android:textColor="#aaaaaa"
+        android:textSize="@dimen/sp15"
+        app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior" />
+
+    <com.cylan.jiafeigou.widget.wheel.WonderIndicatorWheelView
+        android:id="@+id/fLayout_cam_message_list_timeline"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y86"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:layout_marginTop="@dimen/y5"
+        android:clickable="true"
+        android:focusable="true"
+        android:visibility="invisible" />
+
+    <FrameLayout
+        android:id="@+id/fLayout_cam_msg_edit_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/y48"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:background="@color/color_f6f9fa"
+        android:visibility="invisible">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"
+            android:background="@color/color_d2d2d2" />
 
         <TextView
-            android:id="@+id/lLayout_no_message"
+            android:id="@+id/tv_msg_full_select"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:drawablePadding="@dimen/y16"
-            android:drawableTop="@drawable/pic_nomessage"
-            android:gravity="center_horizontal"
-            android:text="@string/NO_CONTENTS_1"
-            android:textColor="#aaaaaa"
-            android:textSize="@dimen/sp15"
-            app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior" />
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingEnd="@dimen/x28"
+            android:paddingStart="@dimen/x28"
+            android:text="@string/SELECT_ALL"
+            android:textColor="@color/color_4b9fd5" />
 
+        <TextView
+            android:id="@+id/tv_msg_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:enabled="false"
+            android:gravity="center_vertical"
+            android:paddingEnd="@dimen/x28"
+            android:paddingStart="@dimen/x28"
+            android:text="@string/DELETE"
+            android:textColor="@color/common_btn_color_state" />
+    </FrameLayout>
 
-        <com.cylan.jiafeigou.widget.wheel.WonderIndicatorWheelView
-            android:id="@+id/fLayout_cam_message_list_timeline"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y86"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="@dimen/y5"
-            android:clickable="true"
-            android:focusable="true"
-            android:visibility="invisible" />
-
-        <FrameLayout
-            android:id="@+id/fLayout_cam_msg_edit_bar"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y48"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:background="@color/color_f6f9fa"
-            android:visibility="invisible">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y1"
-                android:background="@color/color_d2d2d2" />
-
-            <TextView
-                android:id="@+id/tv_msg_full_select"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:paddingEnd="@dimen/x28"
-                android:paddingStart="@dimen/x28"
-                android:text="@string/SELECT_ALL"
-                android:textColor="@color/color_4b9fd5" />
-
-            <TextView
-                android:id="@+id/tv_msg_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:enabled="false"
-                android:gravity="center_vertical"
-                android:paddingEnd="@dimen/x28"
-                android:paddingStart="@dimen/x28"
-                android:text="@string/DELETE"
-                android:textColor="@color/common_btn_color_state" />
-        </FrameLayout>
-    </android.support.design.widget.CoordinatorLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+    <ImageButton
+        android:id="@+id/quick_top"
+        android:layout_width="@dimen/y42"
+        android:layout_height="@dimen/y42"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="@dimen/y22"
+        android:layout_marginEnd="@dimen/y10"
+        android:background="@drawable/icon_stick_to_the_top"
+        android:visibility="invisible" />
+</android.support.design.widget.CoordinatorLayout>
