--- a/app/src/main/res/layout/item_face_selection.xml
+++ b/app/src/main/res/layout/item_face_selection.xml
@@ -5,12 +5,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <!--<FrameLayout-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="center_horizontal"-->
-    <!--android:layout_marginTop="@dimen/y20">-->
-
     <com.cylan.jiafeigou.support.photoselect.CircleImageView
         android:id="@+id/img_item_face_selection"
         android:layout_width="@dimen/y60"
@@ -44,6 +38,7 @@
         android:layout_below="@+id/img_item_face_selection"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y8"
+        android:includeFontPadding="false"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp13" />
 
