--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -255,21 +255,21 @@
     </style>
 
     <style name="status_bar_text_title">
-        <item name="android:textAppearance">
-            @style/TextAppearance.StatusBar.EventContent.Title
-        </item>
+        <!--<item name="android:textAppearance">-->
+            <!--@style/TextAppearance.StatusBar.EventContent.Title-->
+        <!--</item>-->
     </style>
 
     <style name="status_bar_text_content">
-        <item name="android:textAppearance">
-            @style/TextAppearance.StatusBar.EventContent
-        </item>
+        <!--<item name="android:textAppearance">-->
+            <!--@style/TextAppearance.StatusBar.EventContent-->
+        <!--</item>-->
     </style>
 
     <style name="status_bar_text_time">
-        <item name="android:textAppearance">
-            @style/TextAppearance.StatusBar.EventContent.Info
-        </item>
+        <!--<item name="android:textAppearance">-->
+            <!--@style/TextAppearance.StatusBar.EventContent.Info-->
+        <!--</item>-->
     </style>
 
     <style name="video_more_dialog">
