AI 消息页面完善,

--- a/app/src/_aidemo/res/layout/activity_welcome_page.xml
+++ b/app/src/_aidemo/res/layout/activity_welcome_page.xml
@@ -11,15 +11,15 @@
         <FrameLayout
             android:id="@+id/fLayout_splash"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/splash_screen">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/y200"
-                android:src="@drawable/logo_splash_screen"
-                android:visibility="invisible" />
+                android:src="@drawable/logo_splash_screen" />
 
             <TextView
                 android:id="@+id/tv_copy_right"
