--- a/app/src/_doby/res/layout/activity_welcome_page.xml
+++ b/app/src/_doby/res/layout/activity_welcome_page.xml
@@ -12,11 +12,9 @@
             android:id="@+id/fLayout_splash"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/splash_screen"
-        >
+            android:background="@drawable/splash_screen">
 
             <ImageView
-                android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
