--- a/app/src/main/res/layout/item_face_selection.xml
+++ b/app/src/main/res/layout/item_face_selection.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/y101"
     android:orientation="vertical">
 
     <com.cylan.jiafeigou.support.photoselect.CircleImageView
@@ -14,7 +14,7 @@
         android:src="@drawable/news_icon_stranger"
         app:civ_border_color="@color/color_36BDFF"
         app:civ_border_overlay="true"
-        app:civ_border_width="@dimen/y4"
+        app:civ_border_width="@dimen/y3"
         app:civ_hint_color="@color/color_red"
         app:civ_hint_radius="@dimen/y4"
         app:civ_show_hint="false" />
