--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/color_white"
+            app:elevation="0dp"
             app:layout_behavior="com.cylan.jiafeigou.widget.CameraMessageAppBarBehavior">
 
             <FrameLayout
@@ -32,12 +33,6 @@
             android:background="@color/color_white"
             android:visibility="visible"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/y1"
-                android:layout_gravity="bottom"
-                android:background="@color/color_d2d2d2" />
 
 
             <TextView
