--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -91,11 +91,11 @@
                 hunt:sv_v_divider="true"
                 hunt:sv_v_image_show="true" />
 
-            <com.cylan.jiafeigou.widget.SettingItemView1
+            <com.cylan.jiafeigou.widget.SettingItemView0
                 android:id="@+id/sv_setting_device_wired_mode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:visibility="visible"
                 hunt:sv_image_src="@drawable/setting_icon_wired"
                 hunt:sv_sub_title="cylan608"
                 hunt:sv_title="@string/Cable_Mode"
