修复摄像机横屏直播底部状态栏不可见仍然可以点击 bug, 修改摄像机横屏直播时隐藏动画的幅度从0.25 改为0.8, 修复摄像机直播页面 VersionChecker内存泄漏问题.

--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -430,7 +430,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/v_guide"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/x46"
+        android:layout_marginBottom="@dimen/y46"
         android:layout_marginEnd="@dimen/x10"
         android:visibility="gone">
 
