更改 AI 消息页只有一排时隐藏更多文字

--- a/app/src/main/res/layout/fragment_visitor_list.xml
+++ b/app/src/main/res/layout/fragment_visitor_list.xml
@@ -51,7 +51,8 @@
             android:paddingStart="@dimen/y15"
             android:text="@string/Tap1_Menu_More"
             android:textColor="@color/color_4b9fd5_selector"
-            android:textSize="@dimen/sp14" />
+            android:textSize="@dimen/sp14"
+            android:visibility="invisible" />
 
     </FrameLayout>
 
