优化登录超时时的离线登录逻辑 优化首页滑动白块

--- a/app/src/main/res/layout/fragment_home_page_list_header.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_header.xml
@@ -1,7 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fLayout_home_page_list_header_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
+    android:minHeight="@dimen/y48"
+    app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
+    app:statusBarScrim="@android:color/transparent">
 
     <FrameLayout
         android:id="@+id/fLayout_header_bg"
