--- a/app/src/main/res/layout/layout_home_page_list_empty_view.xml
+++ b/app/src/main/res/layout/layout_home_page_list_empty_view.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lLayout_home_page_list_empty_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:visibility="visible">
+    android:visibility="visible"
+    app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior">
 
     <ImageView
         android:id="@+id/imgv_empty_layout_icon"
