修复进入 AI 消息页 刷新不到消息的 bug:125454 修复有线连接 cid 选择页面没有选择 cid 时下一步可点击的 bug 修复每日精彩已访客进入时可以读取到之前缓存数据的 bug 在摄像头设置页和固件升级页增加 固件检测的请求,防止检测不到新固件 修复无网络连接下摄像机底部菜单任然可见的 bug 修改从无网络连接切换到有网络连接时不自动发起直播

--- a/app/src/main/res/layout/fragment_select_cid.xml
+++ b/app/src/main/res/layout/fragment_select_cid.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="@dimen/y37"
         android:gravity="center"
         android:text="@string/NEXT"
-        android:textColor="@color/color_4b9fd5"
+        android:textColor="@color/color_4b9fd5_selector"
         android:textSize="@dimen/sp17"
         app:lb_stroke_color="@color/color_d8d8d8" />
 
