--- a/app/src/main/res/layout/fragment_home_page_list_ext.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_ext.xml
@@ -65,7 +65,7 @@
         android:id="@+id/srLayout_home_page_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.cylan.jiafeigou.widget.DisableAppBarLayoutBehavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <FrameLayout
             android:id="@+id/fLayout_empty_view_container"
