--- a/app/src/main/res/layout/fragment_home_page_list_ext.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_ext.xml
@@ -7,8 +7,7 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.PopupOverlay"
-        app:layout_behavior="com.cylan.jiafeigou.widget.NoDragAppbarBehavior">
+        android:theme="@style/AppTheme.PopupOverlay">
 
 
         <android.support.design.widget.CollapsingToolbarLayout
