1.移除 AI 陌生人右上角的问号 2.降低主页刷新频率为最短700毫秒 3.禁用主页头部滑动避免出现主页白块

--- a/app/src/main/res/layout/fragment_home_page_list_ext.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_ext.xml
@@ -9,14 +9,14 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.PopupOverlay">
 
-
+        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"-->
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:expandedTitleMarginEnd="@dimen/x64"
             app:expandedTitleMarginStart="@dimen/x48"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
+
             app:statusBarScrim="@android:color/transparent">
 
             <include layout="@layout/fragment_home_page_list_header" />
