--- a/app/src/main/res/layout/layout_home_page_list_empty_view.xml
+++ b/app/src/main/res/layout/layout_home_page_list_empty_view.xml
@@ -4,6 +4,7 @@
     android:id="@+id/lLayout_home_page_list_empty_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:orientation="vertical"
     android:visibility="visible"
     app:layout_behavior="com.cylan.jiafeigou.widget.AlwaysCenterBehavior">
