--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -381,5 +381,7 @@
         <attr name="hw_line_interval" format="dimension|reference" />
         <attr name="hw_scroller_lock_time" format="integer|reference" />
         <attr name="hw_history_update_delay" format="integer|reference" />
+        <attr name="hw_history_text_top_margin" format="dimension|reference" />
+        <attr name="hw_history_text_bottom_margin" format="dimension|reference" />
     </declare-styleable>
 </resources>
