--- a/app/src/main/res/layout/fragment_home_mine_message.xml
+++ b/app/src/main/res/layout/fragment_home_mine_message.xml
@@ -80,7 +80,7 @@
                 android:layout_marginStart="@dimen/x35"
                 android:padding="@dimen/x10"
                 android:text="@string/DELETE"
-                android:textColor="@color/color_4b9fd5"
+                android:textColor="@color/color_4b9fd5_selector"
                 android:textSize="@dimen/sp18" />
         </RelativeLayout>
 
