--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,12 @@
         <item name="android:windowActionBar">false</item>
     </style>
 
+    <style name="AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/color_4b9fd5</item>
+        <item name="colorControlNormal">@color/color_4b9fd5</item>
+        <item name="colorControlActivated">@color/color_4b9fd5</item>
+    </style>
+
     <style name="share_style" parent="CamActivityTheme">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">true</item>
@@ -256,19 +262,19 @@
 
     <style name="status_bar_text_title">
         <!--<item name="android:textAppearance">-->
-            <!--@style/TextAppearance.StatusBar.EventContent.Title-->
+        <!--@style/TextAppearance.StatusBar.EventContent.Title-->
         <!--</item>-->
     </style>
 
     <style name="status_bar_text_content">
         <!--<item name="android:textAppearance">-->
-            <!--@style/TextAppearance.StatusBar.EventContent-->
+        <!--@style/TextAppearance.StatusBar.EventContent-->
         <!--</item>-->
     </style>
 
     <style name="status_bar_text_time">
         <!--<item name="android:textAppearance">-->
-            <!--@style/TextAppearance.StatusBar.EventContent.Info-->
+        <!--@style/TextAppearance.StatusBar.EventContent.Info-->
         <!--</item>-->
     </style>
 
