1.首页更改昵称不变化

--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -97,17 +97,6 @@
         android:layout_above="@+id/v_guide"
         android:padding="@dimen/x10">
 
-        <TextView
-            android:id="@+id/layout_b"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="end"
-            android:background="@drawable/flow_bg"
-            android:gravity="center"
-            android:textColor="@color/color_white"
-            android:visibility="gone" />
     </com.cylan.jiafeigou.widget.live.LiveControlView>
 
     <FrameLayout
@@ -246,6 +235,7 @@
                 android:layout_toStartOf="@+id/tv_cam_live_land_bottom">
 
                 <FrameLayout
+                    android:id="@+id/fl_load_history"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/color_F7F8FA"
@@ -408,21 +398,6 @@
 
     </FrameLayout>
 
-    <!--<FrameLayout-->
-    <!--android:id="@+id/layout_g"-->
-    <!--android:layout_width="@dimen/x230"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_gravity="end"-->
-    <!--android:background="@color/color_4C000000"-->
-    <!--android:visibility="gone">-->
-
-    <!--<android.support.v7.widget.RecyclerView-->
-    <!--android:id="@+id/rv_land_date_list"-->
-    <!--android:layout_width="@dimen/x180"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="center" />-->
-    <!--</FrameLayout>-->
 
     <com.cylan.jiafeigou.widget.Switcher
         android:id="@+id/sv_switch_stream"
