1.首页分享设备图标更新不及时 2.添加设备切换 WiFi 时不禁用所有的 WiFi 以免在一些手机上不停的弹窗

--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -1,4 +1,4 @@
-<com.cylan.jiafeigou.n.view.cam.CamLiveControllerEx xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cam_live_control_layer"
@@ -449,4 +449,4 @@
             android:textSize="@dimen/sp12" />
     </com.cylan.jiafeigou.widget.Switcher>
 
-</com.cylan.jiafeigou.n.view.cam.CamLiveControllerEx>
+</RelativeLayout>
