1.直播页面优化

--- a/app/src/main/res/layout/view_camera_wheel_case.xml
+++ b/app/src/main/res/layout/view_camera_wheel_case.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:alpha="0.6"
     android:background="#000000"
+    android:clickable="true"
     android:fitsSystemWindows="true"
+    android:focusable="true"
     android:orientation="vertical">
 
 
