--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -285,7 +285,7 @@
                 <TextView
                     android:id="@+id/tv_live"
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/y52"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:paddingLeft="@dimen/x10"
                     android:paddingRight="@dimen/x10"
