1.流量无数据时默认显示0K/s

--- a/app/src/main/res/layout/layout_live_view_with_thumbnail.xml
+++ b/app/src/main/res/layout/layout_live_view_with_thumbnail.xml
@@ -21,8 +21,9 @@
         android:layout_marginTop="@dimen/x14"
         android:background="@drawable/flow_bg"
         android:gravity="center"
+        android:text="0K/s"
         android:textColor="@color/color_white"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
     <FrameLayout
         android:id="@+id/fLayout_standby_mode"
