1.去掉 AIDemo DobyNew 底图 2.修复第一次使用 APP 无法显示引导页

--- a/app/src/_aidemo/res/layout/activity_welcome_page.xml
+++ b/app/src/_aidemo/res/layout/activity_welcome_page.xml
@@ -11,8 +11,7 @@
         <FrameLayout
             android:id="@+id/fLayout_splash"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/splash_screen">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:layout_width="wrap_content"
