--- a/app/src/main/res/layout/fragment_face_manager.xml
+++ b/app/src/main/res/layout/fragment_face_manager.xml
@@ -16,8 +16,8 @@
         app:ct_icon="@drawable/nav_tab_back_selector"
         app:ct_left_title="@string/MESSAGES_FACE_MABAGE"
         app:ct_left_title_color="@color/color_white"
-        app:ct_right_title="@string/EDIT_THEME"
         app:ct_right_title_color="@color/normal_btn_color_selector">
+    <!--app:ct_right_title="@string/EDIT_THEME"-->
 
     </com.cylan.jiafeigou.widget.CustomToolbar>
 
